Add more datasets

--- a/datasets/memes_dataset_2.in
+++ b/datasets/memes_dataset_2.in
@@ -828,3 +828,4 @@
 1458668	Flip-Table-Meme	Flip table meme	http://cdn.memegenerator.net/images/400x/6031811.jpg
 616	Jonnen-Neuvo	Jonnen Neuvo	http://cdn.memegenerator.net/images/400x/1229.jpg
 981583	Good-Morning-Son	good morning son	http://cdn.memegenerator.net/images/400x/4364452.jpg
+74 But-when-i-do But when i do http://cdn.memegenerator.net/images/400x/4364452.jpg
